--- a/Dockerfile.waqi
+++ b/Dockerfile.waqi
@@ -3,7 +3,7 @@ FROM python:3.11-slim
 WORKDIR /app
 
 COPY scripts/getdata_waqi.py /app
-COPY scripts/requirements.txt /app
+COPY requirements.txt /app
 
 RUN pip install --no-cache-dir -r requirements.txt
 
